# maqr-web-ext

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  tailwind.css
.github/workflows/: deploy-prebuilt.yml  deploy.yml  deploy.yml.disabled
assets/: tailwind.css
docs/: index.html
docs/assets/: maqr-web-ext-dxhc32720fe3f2a3bbb.js
src/: main.rs
src/components/: contact.rs  echo.rs  footer.rs  hero.rs  mod.rs
src/views/: careers.rs  contact.rs  home.rs  job_detail.rs  mod.rs  navbar.rs
