[package]
name = "maqr-web-ext"
version = "0.1.0"
authors = ["yeager620 <4135yeagers@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
lettre = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7", features = ["router", "web"] }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
